Added multer middleware with cloudinary to handle imageUploading
